# compile-commands

./: .gitignore  LICENSE  README.md  compile-commands.py  compile_commands.json  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
benchmark/: profile.sh
compile_commands/: golden_test.py  main.py  test_cli.py  test_compile_commands.py
compile_commands/data/: data.json  execution.json  golden.json
compile_commands/data/compile_commands_tests/: external_component
compile_commands/data/compile_commands_tests/component1/: compile_commands.json
compile_commands/data/compile_commands_tests/component2/: compile_commands.json
src/: arguments.py  compile_commands.py  test_compile_commands.py
src/tests/compile_commands_tests/: compile_commands.json
tests/: golden_test.py  test_cli.py  test_compile_commands.py
tests/data/: arguments_cdb.json  data.json  golden.json
tests/data/external_component/: compile_commands.json
