[metadata]
name = compile-commands
version = 2.0.0
description= Compilation Database Manipulation Utility
url = "https://github.com/qdewaghe/compile-commands"
author = Quentin Dewaghe
author_email = q.dewaghe@gmail.com

long_description = file: README.md
requires_python = ">=3.8"
license = MIT
classifiers =
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "License :: OSI Approved :: MIT License",
        "Operating System :: POSIX :: Linux",
        "Natural Language :: English",

[options]
packages = find:

install_requires =
                 glob2
                 python_version >= "3.8"

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
                compile-commands = compile_commands.main:main

[options.extras_require]
extra =
      pytest
      pytest-cov
      mypy
      gprof2dot

[mypy]
ignore_missing_imports = True
